# ArticlesAPI

./: .env.example  README.curl.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.prod.sh  pyproject.toml
backend/app_api/: settings.py  urls.py
backend/core/: filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/core/management/commands/: load_demo_articles.py  load_demo_users.py
backend/core/migrations/: 0001_initial.py
